# rusqlite-snapshot-testing

./: Cargo.toml  README.md  build.rs
src/: lib.rs
src/snapshots/: rusqlite_snapshot_testing__tests__empty_table.snap  rusqlite_snapshot_testing__tests__with_data.snap  rusqlite_snapshot_testing__tests__with_data_of_inconsistent_types.snap
